objects/Opportunity_Information__c.object
<CustomObject>
    <fields>
        <fullName>End_User_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field from Opportunity: End_User_Project</description>
        <inlineHelpText>Capital expenditure by an identified end user. Can be a new plant, a plant extensions or a retrofit for service investment and can embrace one or more ABB sales opportunities. There are different divisional thresholds that make this field mandatory.</inlineHelpText>
        <label>End User Project</label>
        <referenceTo>End_User_Project__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunity_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Winner_s_Price__c</fullName>
        <description>Contract price of the competitor</description>
        <label>Estimated Winner&apos;s Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Award_Date__c</fullName>
        <formula>Opportunity_Name_m__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_LastSyncDate__c</fullName>
        <label>Last Sync Date to Opp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Originated_System__c</fullName>
        <description>This field is populated by the interface and based on who is the originator of the opportunity (which system) get updated</description>
        <inlineHelpText>This field is populated by the interface and based on who is the originator of the opportunity (which system) get updated</inlineHelpText>
        <label>External Originated System</label>
        <picklist>
            <picklistValues>
                <fullName>ServIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATURB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Quotation_Number_Tech__c</fullName>
        <description>Quotation Number provided by the external quotation system.</description>
        <inlineHelpText>Quotation Number provided by the external quotation system.</inlineHelpText>
        <label>External Quotation Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Quotation_Revision__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indication if quotation has been revised</description>
        <inlineHelpText>Revised - Checked, Not revised - Unchecked</inlineHelpText>
        <label>Revision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Quotation_Status__c</fullName>
        <description>Provides the last known status in External Quotation System.</description>
        <inlineHelpText>Provides the last known status in External Quotation System.</inlineHelpText>
        <label>External Quotation Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Quotation_System__c</fullName>
        <description>This field is populated by the quotation integration providing information which system has created the opportunity.</description>
        <inlineHelpText>This field is populated by the quotation integration providing information which system has created the opportunity.</inlineHelpText>
        <label>External Quotation System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Quotation_Type__c</fullName>
        <description>This field is to differenciate binding from non-binding opportunities.</description>
        <inlineHelpText>Type can be Binding or Non Binding. Binding indicates that Legal T&amp;Cs are associated with this Opportunity and Quotation in external system; and Non Binding indicates that there are no legal T&amp;Cs associated with the quotation in External system.</inlineHelpText>
        <label>External Quotation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Binding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Binding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budgetary</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Quotation_URL__c</fullName>
        <label>External Quotation URL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Quotation_Valid_From__c</fullName>
        <description>Quotation is valid from this date.</description>
        <inlineHelpText>CQP only - Quotation is valid from this date.</inlineHelpText>
        <label>Quotation Valid From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Quotation_Valid_Until__c</fullName>
        <description>Quotation valid until this date.</description>
        <inlineHelpText>CQP Only - Quotation valid until this date.</inlineHelpText>
        <label>Quotation Valid Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Sync_Message__c</fullName>
        <description>Descriptive Sync Status Message from External Quotation System</description>
        <inlineHelpText>Descriptive Sync Status Message.</inlineHelpText>
        <label>Sync Message</label>
        <length>1500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>External_System_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Quotation Number provided by external quotation system.</description>
        <externalId>true</externalId>
        <inlineHelpText>Quotation Number provided by external quotation system.</inlineHelpText>
        <label>External Quotation Number (Tech)</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_User_Type__c</fullName>
        <globalPicklist>External_User_Type</globalPicklist>
        <label>External User Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Heat_Index__c</fullName>
        <description>Created as Part of R7B</description>
        <formula>Opportunity_Name_m__r.Sales_Funnel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Icon represents if the opportunity is Won, Hot, Warm or Cold, using as a basis the ABB Probability and Customer Buying Path</inlineHelpText>
        <label>Heat Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Usage_Level1_Backup__c</fullName>
        <description>Backup field to save existing value. STS R3.0</description>
        <inlineHelpText>Backup field to save existing value. STS R3.0</inlineHelpText>
        <label>Industry Usage Level1 Backup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Usage_Level2_Backup__c</fullName>
        <description>Backup field to save existing value. STS R3.0</description>
        <inlineHelpText>Backup field to save existing value. STS R3.0</inlineHelpText>
        <label>Industry Usage Level2 Backup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Usage_Level3_Backup__c</fullName>
        <description>Backup field to save existing value. STS R3.0</description>
        <inlineHelpText>Backup field to save existing value. STS R3.0</inlineHelpText>
        <label>Industry Usage Level3 Backup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Usage__c</fullName>
        <description>Field from Opportunity: Industry_Usage</description>
        <label>Industry Usage</label>
        <picklist>
            <picklistValues>
                <fullName>BLD.10.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.15.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16.3.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16.3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBU_Technical__c</fullName>
        <description>BU of ABB Location – Bidding unit</description>
        <formula>Opportunity_Name_m__r.LBU_Technical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABB Location LBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LPG_Technical__c</fullName>
        <description>PG of ABB Location – Bidding unit</description>
        <formula>Opportunity_Name_m__r.LPG_Technical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABB Location LPG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <description>When opportunity is created from lead,lead number is captured in Opportunity Information too-CR 299</description>
        <label>Lead-Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <description>Field from Opportunity: Lead Source</description>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar &amp; Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar &amp; Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Field Personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>servIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_Opportunity_ID__c</fullName>
        <description>Created as part of R5-2279</description>
        <externalId>true</externalId>
        <label>Legacy Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field from Opportunity: Local_Business_Unit</description>
        <label>Local Business Unit</label>
        <referenceTo>LBU_Code__c</referenceTo>
        <relationshipLabel>Opportunity Information</relationshipLabel>
        <relationshipName>Opportunity_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_BU_Technical__c</fullName>
        <formula>Opportunity_Name_m__r.Main_BU_Technical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main BU Offering</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Currency_m__c</fullName>
        <description>Field from Opportunity: CurrencyIsoCode</description>
        <label>Opportunity Currency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Information_Name__c</fullName>
        <formula>HYPERLINK(Id, Opportunity_Name_m__r.Name,&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Information Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Information__c</fullName>
        <description>Created as Part of R7B</description>
        <formula>HYPERLINK(&apos;/apex/FindingOpportunityAccessPage?Id=&apos;+Id,  Opportunity_Name__c)</formula>
        <inlineHelpText>Opportunity name should not be too long. It should contain the name of the End User Project (if there is one) and the main offering.</inlineHelpText>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name_m__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to &apos;Name&apos;</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Information</relationshipLabel>
        <relationshipName>Opportunity_Information</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <inlineHelpText>Unique Opportunity Identifier</inlineHelpText>
        <label>Opportunity Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+ Opportunity_Name_m__r.OwnerId, Opportunity_Name_m__r.Owner.FirstName&amp;&quot; &quot;&amp;Opportunity_Name_m__r.Owner.LastName, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_m__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field from Opportunity: Opportunity_owner</description>
        <inlineHelpText>Gives the Salesforce.com ID of the opportunity owner.</inlineHelpText>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Screening_Disqualified__c</fullName>
        <formula>IF( OR( ISPICKVAL( Opportunity_Name_m__r.Opportunity_Qualification_Status__c , &apos;NO BID&apos;), ISPICKVAL( Opportunity_Name_m__r.Opportunity_Screening_Gate_2_Status__c , &apos;NO BID&apos;)  ) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This check-box indicates if this opportunity was given a “No Bid” decision in opportunity qualification or tender screening.</inlineHelpText>
        <label>Opportunity Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Secondary_Name__c</fullName>
        <inlineHelpText>Can be used to reflect Opportunity name in local language while the Opportunity name shall be recorded in English</inlineHelpText>
        <label>Opportunity Secondary Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Value__c</fullName>
        <formula>Opportunity_Name_m__r.Opportunity_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Winner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be filled out in case the opportunity was lost against a competitor</description>
        <label>Opportunity Winner</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Information (Opportunity Winner)</relationshipLabel>
        <relationshipName>Opportunity_Information1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field from Opportunity: Product_Group</description>
        <inlineHelpText>Auto-populated from offering flagged as &quot;Primary Product Group&quot;. If offering is not yet known yet but the Product Group (representing main offering as demanded by customer) is, the Primary Product Group can be entered directly.</inlineHelpText>
        <label>Offering -  Primary Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Opportunity Information</relationshipLabel>
        <relationshipName>Opportunity_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFQ_Issue_Date__c</fullName>
        <description>Date when the RFQ was issued</description>
        <label>RFQ Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Opportunity_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Opportunity that belongs to a summary (Master) opportunity which can have one or more linked sub-opportunities. Must have an ICV account selected as account customer as it reflects an ABB internal supply.</inlineHelpText>
        <label>Sub Opportunity To</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sub Opportunities</relationshipLabel>
        <relationshipName>SubOpportunityTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Opportunity_To_formula__c</fullName>
        <formula>HYPERLINK(&apos;/apex/FindingOpportunityAccessPage?Id=&apos;+Opportunity_Name_m__r.Sub_Opportunity_To__c,Opportunity_Name_m__r.Sub_Opportunity_To__r.Name)</formula>
        <inlineHelpText>Opportunity that belongs to a summary (Master) opportunity which can have one or more linked sub-opportunities. Must have an ICV account selected as account customer as it reflects an ABB internal supply.</inlineHelpText>
        <label>Sub Opportunity To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Consortium_Value__c</fullName>
        <description>Created as part of R5-2295</description>
        <label>Total Consortium Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_Opportunity_Informations__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Opportunity Informations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity_Name_m__c</columns>
        <columns>ABB_Sales_Stage__c</columns>
        <columns>Account_End_User_m__c</columns>
        <columns>End_User_Project__c</columns>
        <columns>Local_Business_Unit__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Industry_Usage__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OI-{0000000}</displayFormat>
        <label>Opportunity Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Information</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>